[metadata]
name        = ColumnAlchemy
description = additional column types for SQLAlchemy
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
license     = MIT

long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
namespace_packages = schwarz
zip_safe = false
include_package_data = true


[bdist_wheel]
universal = 1

