[metadata]
name        = ColumnAlchemy
description = additional column types for SQLAlchemy
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
url         = https://github.com/FelixSchwarz/column-alchemy
license     = MIT

long_description = file:README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6

packages = find_namespace:
zip_safe = false
include_package_data = true

install_requires =
    # >= 1.2.3: Enum(…, values_callable=…)
    SQLAlchemy >= 1.2.3

[options.extras_require]
testing =
    pytest
